stage0/tests/snapshots/program__tests_fixtures_programs_actors_actor_frame_value_root.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/actors/actor_frame_value_root.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
keep
stderr:
<empty>
