stage0/tests/snapshots/program__tests_fixtures_programs_actors_actor_id_unknown_local_annotation_messages.snap
---
source: tests/fixtures.rs
assertion_line: 4782
expression: transcript
---
fixture: tests/fixtures/programs/actors/actor_id_unknown_local_annotation_messages.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
string
int
stderr:
<empty>
