stage0/tests/snapshots/program__tests_fixtures_programs_actors_actor_let_rebinding.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/actors/actor_let_rebinding.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
ok
stderr:
<empty>
