stage0/tests/snapshots/program__tests_fixtures_programs_actors_actor_operation_higher_order_targets.snap
---
source: tests/fixtures.rs
assertion_line: 2971
expression: transcript
---
fixture: tests/fixtures/programs/actors/actor_operation_higher_order_targets.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
higher order watched
higher order
stderr:
<empty>
