stage0/tests/snapshots/program__tests_fixtures_programs_actors_actor_operation_local_factory_targets.snap
---
source: tests/fixtures.rs
assertion_line: 2677
expression: transcript
---
fixture: tests/fixtures/programs/actors/actor_operation_local_factory_targets.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
local factory sent
local factory monitored
local factory linked
stderr:
<empty>
