stage0/tests/snapshots/program__tests_fixtures_programs_actors_fanout_fibonacci_merge.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/actors/fanout_fibonacci_merge.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
5
4
3
2
1
0
1
2
1
0
3
2
1
0
1
3
2
1
0
1
4
3
2
1
0
1
2
1
0
8
3
5
stderr:
<empty>
