stage0/tests/snapshots/program__tests_fixtures_programs_actors_fibonacci_worker.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/actors/fibonacci_worker.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
8
stderr:
<empty>
