stage0/tests/snapshots/program__tests_fixtures_programs_actors_monitor_down.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/actors/monitor_down.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
watched
down
stderr:
<empty>
