stage0/tests/snapshots/program__tests_fixtures_programs_actors_monitor_multiple_watchers.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/actors/monitor_multiple_watchers.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
watched twice
down
down
stderr:
<empty>
