stage0/tests/snapshots/program__tests_fixtures_programs_actors_receive_list_tail_payload_pattern.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/programs/actors/receive_list_tail_payload_pattern.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
10
stderr:
<empty>
